# genmap

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.rst  CMakeLists.txt  LICENSE.rst  README.rst  coverage_info
benchmarks/: CMakeLists.txt  bench.cpp  bench.sh
src/: CMakeLists.txt  algo.hpp  common.hpp  find2_index_approx.hpp  genmap.cpp  genmap_helper.hpp  indexing.hpp  mappability.hpp  output.hpp  seqan_libdivsufsort.h  tests.cpp
tests/: CMakeLists.txt  bowtie-test.sh  tests.cpp  tests.sh
tests/test_cases/: README.rst
tests/test_cases/case_1/: genome.fa
tests/test_cases/case_1/bed_freq16/: 1.fa.bed
tests/test_cases/case_1/bed_map/: 1.fa.bed
tests/test_cases/case_1/csv/: 1.fa.csv  genome.csv
tests/test_cases/case_1/raw_freq16/: 1.fa.freq16
tests/test_cases/case_1/raw_freq8/: 1.fa.freq8  seq1.freq8
tests/test_cases/case_1/txt_freq16/: 1.fa.txt  seq1.txt
tests/test_cases/case_1/txt_map/: 1.fa.txt  genome.txt
tests/test_cases/case_1/wig_freq16/: 1.fa.wig  seq1.chrom.sizes
tests/test_cases/case_1/wig_map/: 1.fa.wig  genome.genmap.chrom.sizes  seq1.wig
tests/test_cases/case_1a/: genome.fa
tests/test_cases/case_1a/bed_freq16/: genome.genmap.bed  genome.genmap.bedgraph
tests/test_cases/case_1a/bed_map/: genome.genmap.bed  genome.genmap.bedgraph
tests/test_cases/case_1a/csv/: genome.genmap.csv
tests/test_cases/case_1a/raw_map/: genome.genmap.map
tests/test_cases/case_1a/txt_freq16/: genome.genmap.txt
tests/test_cases/case_1a/txt_freq8/: genome.genmap.txt
tests/test_cases/case_1a/txt_map/: genome.genmap.txt
tests/test_cases/case_1a/wig_freq16/: genome.genmap.wig
tests/test_cases/case_1a/wig_map/: genome.genmap.chrom.sizes  genome.genmap.wig
tests/test_cases/case_1b/: genome.fa
tests/test_cases/case_1b/bed_freq16/: genome.genmap.bed  genome.genmap.bedgraph
tests/test_cases/case_1b/bed_map/: genome.genmap.bed  genome.genmap.bedgraph
tests/test_cases/case_1b/csv/: genome.genmap.csv
tests/test_cases/case_1b/raw_freq16/: genome.genmap.freq16
tests/test_cases/case_1b/raw_freq8/: genome.genmap.freq8
tests/test_cases/case_1b/raw_map/: genome.genmap.map
tests/test_cases/case_1b/txt_freq16/: genome.genmap.txt
tests/test_cases/case_1b/txt_map/: genome.genmap.txt
tests/test_cases/case_1b/wig_freq16/: genome.genmap.wig
tests/test_cases/case_1b/wig_map/: genome.genmap.chrom.sizes  genome.genmap.wig
tests/test_cases/case_1c/bed_freq16/: genome.genmap.bed  genome.genmap.bedgraph
tests/test_cases/case_1c/bed_map/: genome.genmap.bed  genome.genmap.bedgraph
tests/test_cases/case_1c/csv/: genome.genmap.csv
tests/test_cases/case_1c/raw_freq16/: genome.genmap.freq16
tests/test_cases/case_1c/raw_freq8/: genome.genmap.freq8
tests/test_cases/case_1c/raw_map/: genome.genmap.map
tests/test_cases/case_1c/txt_freq16/: genome.genmap.txt
tests/test_cases/case_1c/txt_map/: genome.genmap.txt
tests/test_cases/case_1c/wig_freq16/: genome.genmap.wig
tests/test_cases/case_1c/wig_map/: genome.genmap.wig
tests/test_cases/case_1d/bed_freq16/: genome.genmap.bed  genome.genmap.bedgraph
tests/test_cases/case_1d/bed_map/: genome.genmap.bed  genome.genmap.bedgraph
tests/test_cases/case_1d/csv/: genome.genmap.csv
tests/test_cases/case_1d/raw_freq16/: genome.genmap.freq16
tests/test_cases/case_1d/raw_freq8/: genome.genmap.freq8
tests/test_cases/case_1d/raw_map/: genome.genmap.map
tests/test_cases/case_1d/txt_freq16/: genome.genmap.txt
tests/test_cases/case_1d/txt_map/: genome.genmap.txt
tests/test_cases/case_1d/wig_freq16/: genome.genmap.wig
tests/test_cases/case_1d/wig_map/: genome.genmap.wig
tests/test_cases/case_1e/: genome.fa
tests/test_cases/case_1e/bed_freq16/: genome.genmap.bed  genome.genmap.bedgraph
tests/test_cases/case_1e/bed_map/: genome.genmap.bed  genome.genmap.bedgraph
tests/test_cases/case_1e/csv/: genome.genmap.csv
tests/test_cases/case_1e/raw_freq16/: genome.genmap.freq16
tests/test_cases/case_1e/raw_freq8/: genome.genmap.freq8
tests/test_cases/case_1e/raw_map/: genome.genmap.map
tests/test_cases/case_1e/txt_freq16/: genome.genmap.txt
tests/test_cases/case_1e/txt_map/: genome.genmap.txt
tests/test_cases/case_1e/wig_freq16/: genome.genmap.wig
tests/test_cases/case_1e/wig_map/: genome.genmap.wig
tests/test_cases/case_1f/bed_freq16/: genome.genmap.bed  genome.genmap.bedgraph
tests/test_cases/case_1f/bed_map/: genome.genmap.bed  genome.genmap.bedgraph
tests/test_cases/case_1f/csv/: genome.genmap.csv
tests/test_cases/case_1f/raw_freq16/: genome.genmap.freq16
tests/test_cases/case_1f/raw_freq8/: genome.genmap.freq8
tests/test_cases/case_1f/raw_map/: genome.genmap.map
tests/test_cases/case_1f/txt_freq16/: genome.genmap.txt
tests/test_cases/case_1f/txt_map/: genome.genmap.txt
tests/test_cases/case_1f/wig_freq16/: genome.genmap.chrom.sizes  genome.genmap.wig
tests/test_cases/case_1f/wig_map/: genome.genmap.wig
tests/test_cases/case_1g/: subset.bed
tests/test_cases/case_1g/bed_freq16/: genome.genmap.bed  genome.genmap.bedgraph
tests/test_cases/case_1g/bed_map/: genome.genmap.bed  genome.genmap.bedgraph
tests/test_cases/case_1g/csv/: genome.genmap.csv
tests/test_cases/case_1g/raw_freq16/: genome.genmap.freq16
tests/test_cases/case_1g/raw_freq8/: genome.genmap.freq8
tests/test_cases/case_1g/raw_map/: genome.genmap.map
tests/test_cases/case_1g/txt_freq16/: genome.genmap.txt
tests/test_cases/case_1g/txt_map/: genome.genmap.txt
tests/test_cases/case_1g/wig_freq16/: genome.genmap.wig
tests/test_cases/case_1g/wig_map/: genome.genmap.wig
tests/test_cases/case_2/: genome.fa
tests/test_cases/case_2a/: genome.fa
tests/test_cases/case_2a/bed_map/: genome.genmap.bed  (+1 more)
tests/test_cases/case_2b/: genome.fa
tests/test_cases/case_2c/: genome.fa
tests/test_cases/case_2e/: subset.bed
tests/test_cases/case_3a/: genome2.fa
tests/test_cases/case_3b/: genome2.fa  genome3.fa
tests/test_cases/case_3c/: genome1.fa
tests/test_cases/case_3d/: genome1.fa  genome3.fa
tests/test_cases/case_3e/: genome2.fa  genome3.fa  subset.bed
tests/test_cases/case_3f/: subset.bed
(+246 files in other folders)
